--- a/pythonfoundation_for_data_science.ipynb
+++ b/pythonfoundation_for_data_science.ipynb
@@ -6,6 +6,7 @@
       "name": "pythonfoundation for data science.ipynb",
       "version": "0.3.2",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,7 +27,17 @@
     },
     {
       "metadata": {
-        "id": "t69cV_h8hQnY",
+        "id": "lMsp6sRXjE_T",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "# ** Introdution to python for data science **"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "P1kdwSovjat5",
         "colab_type": "code",
         "colab": {}
       },
