--- a/pythonfoundation_for_data_science.ipynb
+++ b/pythonfoundation_for_data_science.ipynb
@@ -39,14 +39,35 @@
       "metadata": {
         "id": "P1kdwSovjat5",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5ca5bbc1-415c-4fc2-89ce-d4e87709620c"
       },
       "cell_type": "code",
       "source": [
-        ""
+        "A=[[1,2,3,4],[5,6,7,8],[9,10,11,12]]\n",
+        "print(A)\n",
+        "AT=[]\n",
+        "for i in range(4):\n",
+        "  row_trans=[]\n",
+        "  for row in A:\n",
+        "    row_trans.append(row[i])\n",
+        "  AT.append(row_trans)\n",
+        "print(AT)\n",
+        "  \n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[1, 2, 3, 4], [5, 6, 7, 8], [9, 10, 11, 12]]\n",
+            "[[1, 5, 9], [2, 6, 10], [3, 7, 11], [4, 8, 12]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
